[package]
name = "cloudcity"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytemuck = { version = "1.23.2", features = ["derive"] }
clap = { version = "4.5.46", features = ["derive"] }
crossbeam = "0.8.4"
egui = "0.32.1"
egui-wgpu = { version = "0.32.1", features = ["winit"] }
egui-winit = "0.32.1"
encase = { version = "0.11.2", features = ["glam"] }
env_logger = "0.11.8"
glam = { version = "0.30.5", features = ["bytemuck"] }
las = "0.9.5"
log = "0.4.27"
pollster = "0.4.0"
rand = "0.8.5"
rng = "0.1.0"
wgpu = "25.0.2"
winit = "0.30.12"
